# DAWN_pub_real

./: .gitattributes  .gitignore  AlertAnomalyPanel.jsx  BLOOM_VALIDATION_DELIVERY.md  CLEANUP_SUMMARY.md  COMPLETE_SYMBOLIC_INTEGRATION_SUCCESS.md  COMPONENT_STATUS_UPDATE.md  CONVERSATION_SYSTEM_STATUS.md  DAWN_CONSCIOUSNESS_VOCABULARY_INTEGRATION.md  DAWN_CONSOLIDATED_GUI_README.md  DAWN_FRACTAL_INTERFACE_DELIVERY.md  DAWN_INTEGRATION_COMPLETE.md  DAWN_STARTUP_GUIDE.md  DAWN_VOICE_CORE_COMPLETE.md  DAWN_VOICE_SYSTEM_README.md  DEEP_REFLEX_LOOP_ACTIVATED.md  JULIET_MODE_REFINEMENTS.md  MAIN_PY_STATUS.md  MEMORY_FOSSILS_IMPLEMENTATION_GUIDE.md  MODULATION_CONSOLE.md  PARAMETER_RESPONSIVENESS_REPORT.md  README.md  README.txt  SIGIL_GLOW_EFFECTS_GUIDE.md  SymbolicTraceComposer.py  Tick_engine.lnk  __init__.py  a8d11041-0735-4632-ae0b-1f6897d21194.json  all_python_files_full.txt  animate_field_map.py  app.py  backend_output.txt  backfill1.py  batch_convert_helix_imports.py  belief_anchor_manager.py  bloom_owl_commentary.py  bloom_symbolic_narrator.py  builder_statement.txt  claude_chat_logger.py  claude_development_workflow.py  (+230 more)
BP/: # Build DAWN Tick Pulse Visualization.txt  # DAWN FastAPI Server Implementation.md  # DAWN Frontend Removal & Clean Setup Bl.md  # DAWN Frontend WebSocket Implementation.md  # DAWN Monitor Data Visualization Patter.txt  # DAWN Repository Cleanup Analysis.md  # DAWN Swiss-Terminal Design System Blue.md  # DAWN Talk Feature - Implementation.md  # meta_reflex.md  ActvityMonitor.ts  CONSCIOUSNESS_INTEGRATION_SUMMARY.md  Codex BP.md  Complete Fix Instructions for DAWN.md  Connect Port 3000 App to DAWN Tick Engine.md  Consciousness-Engine-Visulization.md  DAWN Complete Implementation Bp.md  DAWN Development.md  DAWN Neural Visualizations Integration.md  DAWN Salvage Checklis.txt  DAWN Talk-To Function Integration Blueprint.txt  DAWN Talk-To Function with Matplotlib Integration Blueprint.txt  DAWN Unified Integration Blueprint - Old.md  DAWN Visual Processes Integration Blueprint.txt  DAWNFixesBP.md  DAWNIntergrationBP.md  DAWNSystemFixBP.md  DashboardImplementationBP.md  Drift.txt  Fix Consciousness Canvas & Enhance Visualization.md  Fix Consciousness Page Connection Issues.md  Fix-Import-Errors-BP.md  IMPORT_FIX_RESULTS.md  INTEGRATION-GUIDE.md  MEMORY_SCROLL_README.md  MemoryPalaceVisulasierBP.md  Mood State Visualizer.txt  NGROK_SETUP.md  NeuralNetwork3DBP.md  OldRepositryIntergrationGuide.md  Optimized DAWN Homepage - Static Layout with Smart Animations.md  (+45 more)
analysis/: agreement_matrix.py  mood_engine.py  semantic_distance.py
backend/: README.md  VISUALIZATIONS_README.md  __init__.py  advanced_consciousness_system.py  advanced_consciousness_websocket.py  autonomous_consciousness_writer.py  base_visualizer.py  cairrn_kan_requirements.txt  consciousness.py  debug_dawn_system.py  demo_talk_system.py  diagnostic_dawn_dynamic_values.py  diagnostic_scan.py  diagnostic_scan_focused.py  diagnostic_thought_seeder.py  enhanced_consciousness_writer.py  expressive_consciousness_writer.py  fix_empty_try_blocks.py  fix_try_blocks.py  fragment_speech_integration.py  gif_saver.py  local_main.py  main.py  matplotlib_visualizers.py  neural_metrics_service.py  requirements.txt  requirements_advanced.txt  run_backend.py  run_backend_with_fragments.py  start_api_fixed.py  (+12 more)
dawn-consciousness-gui/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
dawn-consciousness-gui/src-tauri/icons/: icon.png:Zone.Identifier
dawn-consciousness-gui/src-tauri/src/: dawn_bridge.rs  lib.rs  main.rs  mmap_reader.rs  tick_handler.rs
dawn-desktop/src-tauri/: Cargo.toml  tauri.conf.json
dawn-desktop/src-tauri/src/: main.rs
(+14118 files in other folders)
