[package]
name = "dawn-desktop"
version = "0.1.0"
description = "DAWN Neural System Monitor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
